force-app/main/default/objects/Bank_Account__c/fields/Closure_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Closure_Reasons__c</fullName>
    <label>Closure Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CUSTOMER_WISH</fullName>
                <label>Customer Wish</label>
            </value>
            <value>
                <fullName>TAX_DATA_NOT_PROVIDED</fullName>
                <label>Tax Data Not Provided</label>
            </value>
            <value>
                <fullName>KYC_NOT_COMPLETED</fullName>
                <label>Kyc Not Completed</label>
            </value>
            <value>
                <fullName>BUSINESS_RELATIONS_END</fullName>
                <label>Business Relations End</label>
            </value>
            <value>
                <fullName>COMPLIANCE_REGULATORY</fullName>
                <label>Compliance Regulatory</label>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>