force-app/main/default/objects/Bank_Account__c/fields/Legal_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Closure_Date__c</fullName>
    <label>Legal Closure Date</label>
    <type>Date</type>
</CustomField>