force-app/main/default/objects/Bank_Account__c/fields/Solarisbank_Tenent__c.field-meta.xml
<CustomField>
    <fullName>Solarisbank_Tenent__c</fullName>
    <formula>TEXT(Person_Account__r.Solarisbank_Tenent__c )</formula>
    <label>Solarisbank Tenent</label>
    <type>Text</type>
</CustomField>