force-app/main/default/objects/Bank_Account__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>INACTIVE</fullName>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>NO_BLOCK</fullName>
                <label>No Block</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>