force-app/main/default/objects/Bank_Account__c/fields/Technical_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Technical_Closure_Date__c</fullName>
    <label>Technical Closure Date</label>
    <type>Date</type>
</CustomField>