force-app/main/default/objects/Bank_Account__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CHECKING_PERSONAL</fullName>
                <label>Checking Personal</label>
            </value>
            <value>
                <fullName>CHECKING_BUSINESS</fullName>
                <label>Checking Business</label>
            </value>
            <value>
                <fullName>CALL_MONEY</fullName>
                <label>Call Money</label>
            </value>
            <value>
                <fullName>TERM_DEPOSIT</fullName>
                <label>Term Deposit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>