force-app/main/default/objects/Bank_Account__c/listViews/All_Bank_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Bank_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Person_Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Bank Accounts</label>
</ListView>